[package]
name = "serial-monitor"
version = "0.0.7"
authors = ["Dave Hylands <dhylands@gmail.com>"]
categories = ["command-line-utilities"]
documentation = "https://github.com/dhylands/serial-monitor#serial-monitor"
edition = "2018"
homepage = "https://github.com/dhylands/serial-monitor"
keywords = ["serial", "communications", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dhylands/serial-monitor"
description = "Cross platform command line serial terminal program."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.4.4"
color-eyre = "0.6.2"
crossterm = { version = "0.27", features = ["event-stream"] }
eyre = "0.6.9"
futures = { version = "0.3" }
futures-timer = "3.0"
mio-serial = "5.0.5"
serialport = "4.2.2"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["codec"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
wildmatch = "2.1.1"
