[package]
name = "serial-monitor"
version = "0.0.7"
authors = ["Dave Hylands <dhylands@gmail.com>"]
license = "MIT"
keywords = ["serial", "communications", "terminal"]
categories = ["command-line-utilities"]
description = "Cross platform command line serial terminal program."
homepage = "https://github.com/dhylands/serial-monitor"
documentation = "https://github.com/dhylands/serial-monitor#serial-monitor"
repository = "https://github.com/dhylands/serial-monitor"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { version = "0.3" }
mio-serial = "5.0"
serialport = "4.5"
structopt = "0.3"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5.4"
wildmatch = "2.3"
strum = { version = "0.26", features = ["derive"] }
